--- a/src/index.css
+++ b/src/index.css
@@ -4,26 +4,102 @@
   box-sizing: border-box;
 }
 
+body{
+  background-color: #434343 ;
+}
 
 
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: black;
+  height: 80px;
 
+    h1{
+      color: red;
+    }
+
+    .searchbar{
+      font-size: 15px;
+      border: 2px solid gray;
+    }
+
+    .searchbar-btn{
+      margin: 5px;
+      padding: 8px;
+      background-color: red;
+      border-color: gray;
+      text-transform: uppercase;
+      transition: ease;
+    }
+
+    .searchbar-btn:hover{
+      cursor: pointer;
+      background-color: darkred;
+      color: white;
+      
+
+    }
+
+} 
+
+main{
+  padding-top: 20px;
+
+  .results-container{
+
+    h2{
+      color: #C5D4E0;
+      margin-left: 20px;
+      font-weight: 900;
+      font-size: 30px;
+    }
+  }
+}
 
 .card-container{
+  min-height: 500px;
+  max-width: 1300px;
   display: flex;
   flex-wrap: wrap;
   gap: 16px;
+  margin: 20px auto;
+
+  .card{
+    width: 200px;
+    height: 300px;
+    border: 1px solid black;
+    text-align: center;
+    background-color: black;
+    color: white;
+    border-radius: 8px;
+
+    h3{
+      margin: 20px;
+
+    }
+
+    p{
+      margin: 10px;
+
+      i{
+        font-size: 10px;
+        color: gold;
+      }
+    }
+
+
+
+    .poster{
+      width: 100%;
+      height: 100%;
+      border-radius: 8px;
+    }
+  
+  }
 }
 
-.card{
-  width: 200px;
-  padding: 10px;
-  border: 1px solid black;
-  text-align: center;
-  background-color: #fff;
 
-}
 
-.poster{
-  width: 100%;
-  height: auto;
-}
